UIP-1192 --> Add Indent Component for PingAccess policy updates
Change-Id: I605d984279170a05a4392ab6a6e53790d73fff11

--- a/packages/ui-library/src/css/ui-library.scss
+++ b/packages/ui-library/src/css/ui-library.scss
@@ -19,6 +19,7 @@
 @import 'html-elements';
 @import 'i18n';
 @import 'icons';
+@import 'indent';
 @import 'inputs';
 @import 'layout';
 @import 'loader';
