simple css fix for changes already made - adding close confirmation to the modal
Change-Id: I2ace4bc592edd60d2e9ed6864a3bcac30ecd9ec6

--- a/packages/ui-library/src/css/modals.scss
+++ b/packages/ui-library/src/css/modals.scss
@@ -76,6 +76,8 @@
             color: transparent;
         }
         .close-modal {
+            cursor: pointer;
+
             &:after {
                 color: $color-rhino;
                 font-size: 18px;
