--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -562,6 +562,22 @@ label {
     }
 }
 
+.content-measurer {
+    position: absolute;
+    display: inline-block;
+    z-index: -10;
+    visibility: hidden;
+}
+
+.flex-width {
+    .input-container {
+        input[type=text],
+        input[type=password] {
+            @include transition((width 0s));
+        }
+    }
+}
+
 fieldset {
     margin: 0 0 25px;
 
