PID-4662 : change display of section content to fix issue with drag/drop in Chrome
Change-Id: I8d253a15a0e3fd14ec715e4df9f1e3f2d56896cb

--- a/packages/ui-library/src/css/collapsible-section.scss
+++ b/packages/ui-library/src/css/collapsible-section.scss
@@ -25,14 +25,14 @@
         color: $color-midnight;
     }
     > .collapsible-section-content {
+        display: none;
+        visibility: hidden;
         position: relative;
-        overflow: hidden;
-        max-height: 0;
 
         @include transition(all 0.3s);
 
         > .collapsible-section-content-inner {
-            margin: 19px 0 0 25px;
+            margin: 25px 0 0 25px;
         }
     }
     > .collapsible-section-accessories {
@@ -63,8 +63,8 @@
     }
     &.open {
         > .collapsible-section-content {
-            overflow: visible;
-            max-height: 4000px;
+            display: block;
+            visibility: visible;
 
             @include animation(fade-in 0.2s);
         }
