UIP-1189 : add word-wrap property to data values and the details tooltip body
Change-Id: I2e45905fe9afb06273db766ee68ac3c87a50999e

--- a/packages/ui-library/src/css/data-sets.scss
+++ b/packages/ui-library/src/css/data-sets.scss
@@ -129,6 +129,7 @@
     .data-item {
         display: table-row;
         line-height: 1em;
+        word-break: break-word;
 
         > label,
         > span {
@@ -142,6 +143,7 @@
             cursor: default;
             font-size: 14px;
             color: $color-elephant;
+            word-break: normal;
 
             &.input-radio {
                 cursor: pointer;
