--- a/packages/ui-library/src/css/details-tooltip.scss
+++ b/packages/ui-library/src/css/details-tooltip.scss
@@ -104,6 +104,7 @@
         width: 0;
         padding: 0;
         margin: 0;
+        word-break: break-word;
 
         > .details-content-inner {
             position: relative;
