UIP-1216 --> Increase MultiDrag search text field width
Change-Id: I79e95f7d2b6847911ac983b9a649ac5ad546a213

--- a/packages/ui-library/src/css/row-selector.scss
+++ b/packages/ui-library/src/css/row-selector.scss
@@ -16,7 +16,7 @@
     }
     // needed for specifity to override inputs
     label {
-        .input-search {
+        &.input-search {
             width: 100%;
             input[type=text] {
                 width: 100%;
