UIP-1219 --> Update data set styles for multi-value data-items
Change-Id: Iaec4a8a9980203fb8b0cb446ce8ea9d0a833bda0

--- a/packages/ui-library/src/css/data-sets.scss
+++ b/packages/ui-library/src/css/data-sets.scss
@@ -151,9 +151,15 @@
             &:after {
                 content: ':';
             }
-            &.no-data {
+            &.no-data,
+            &.simple {
                 &:after {
                     content: '';
+                }
+            }
+            &.simple {
+                a {
+                    text-transform: none;
                 }
             }
         }
@@ -230,6 +236,14 @@
         .help-tooltip {
             vertical-align: bottom;
             margin: -3px 0 0 5px;
+        }
+        ul {
+            li {
+                margin-bottom: 7px;
+                a {
+                    margin: 0 20px 0 10px;
+                }
+            }
         }
     }
     .data-col-of-2,
