UIP-1187 : add a 100% max-width to the flex-width input
Change-Id: I331200145eabd2ac21e156bcec08fe5572d73eeb

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -570,9 +570,13 @@ label {
 }
 
 .flex-width {
+    max-width: 100%;
+
     .input-container {
         input[type=text],
         input[type=password] {
+            max-width: 100%;
+
             @include transition((width 0s));
         }
     }
