UIP-1220 --> Show/hide button on disabled hidden FormTextField is clickable
Change-Id: I355f9bc39dc938b7bc94d3d4fd1d25970d6d8ae6

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -1936,6 +1936,10 @@ input[type=file] {
                 }
             }
         }
+        .password-show-button {
+            cursor: default;
+            pointer-events: none;
+        }
     }
 
     &.input-checkbox {
