UIP-1221, UIP-1222 --> Indent Component Styling Updates; Move Link component styles outside indent component styles
Change-Id: I7bf6078ec0470023834209041c8b535dadd8be19

--- a/packages/ui-library/src/css/indent.scss
+++ b/packages/ui-library/src/css/indent.scss
@@ -5,6 +5,9 @@
     overflow: hidden;
     line-height: 1.0em;
     
+    &.grouped {
+        margin-bottom: 10px;
+    }
     .count {
         background-color: $color-white;
         min-width: 16px;
@@ -43,7 +46,7 @@
         &.no-border {
             border-left: none;
         }
-        .link {
+        .content-link {
             padding: 7px 3px 5px;
             margin-left: -8px;
             a {
