UIP-1187 --> Expandable Row - Show full title when row is expanded (currently truncated): Need to handle situation where title or subtitle do not have spaces
Change-Id: Ia7311c7f514d8af287c114d6920193c6935e33fd

--- a/packages/ui-library/src/css/result-sets.scss
+++ b/packages/ui-library/src/css/result-sets.scss
@@ -258,6 +258,7 @@
             .item-title,
             .item-sub-title {
                 white-space: normal;
+                word-break: break-word;
             }
         }
         &.no-edit {
