UIP-1225 : fix issue with improper drop index when dragging down
Change-Id: I30428301e3714f9907ddebc4d69eee92202b9490

--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -862,9 +862,11 @@ $layout-nav-width-offset: 15px;
     @include flexbox;
 
     .content-column {
-        @include flexbox-grow(1);
+        flex: 1;
         box-sizing: border-box;
         margin: 0 40px 0 0;
+
+        @include flexbox-grow(1);
 
         &:last-of-type {
             margin: 0;
