UIP-1231 : enforce max-height w/scrolling on expandable row content
Change-Id: Id06cfcb4ecf0211900e1463c77e0e6e62173826f

--- a/packages/ui-library/src/css/result-sets.scss
+++ b/packages/ui-library/src/css/result-sets.scss
@@ -70,6 +70,10 @@
                 right: 0;
             }
         }
+        .expanded-content-scroll {
+            max-height: 700px;
+            overflow-y: auto;
+        }
         .item-title {
             font-size: 17px;
             line-height: 1em;
