--- a/packages/ui-library/src/css/task.scss
+++ b/packages/ui-library/src/css/task.scss
@@ -225,6 +225,10 @@
 
         @include button-spacing();
     }
+}
+
+//  DEPRICATED STYLES --------------------------------------------------------------------------------------------------
+.task {
     input[type=text],
     input[type=password],
     textarea {
