UIP-1239 : fix bug in new input widths styling
Change-Id: I810b34b04030ed9fa3d70bb1c6f186867dc21532

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -2321,7 +2321,7 @@ label {
         input[type=text],
         input[type=password],
         textarea {
-            width: auto;
+            width: 100%;
         }
     }
 
