--- a/packages/ui-library/src/css/tables.scss
+++ b/packages/ui-library/src/css/tables.scss
@@ -4,26 +4,48 @@ table {
         display: inline-block;
         border-collapse: separate;
 
+        &.width-full {
+            display: table;
+            width: 100%;
+            table-layout: fixed;
+
+            $widths: (
+                5: 5,
+                10: 10,
+                12: 12.5,
+                15: 15,
+                20: 20,
+                25: 25,
+                30: 30,
+                33: 100/3,
+                35: 35,
+                40: 40,
+                45: 45,
+                50: 50,
+                55: 55,
+                60: 60,
+                65: 65,
+                66: 200/3,
+                70: 70,
+                75: 75,
+                80: 80,
+                85: 85,
+                87: 87.5,
+                90: 90,
+                95: 95
+            );
+
+            @each $name, $value in $widths {
+                .column-#{$name}p {
+                    width: $value * 1%;
+                }
+            }
+        }
         th {
             font-size: 13px;
             color: $color-elephant;
             text-transform: uppercase;
 
-            &.column-xs {
-                width: 90px;
-            }
-            &.column-sm {
-                width: 190px;
-            }
-            &.column-md {
-                width: 290px;
-            }
-            &.column-lg {
-                width: 390px;
-            }
-            &.column-xl {
-                width: 490px;
-            }
             &.column-pg {
                 padding: 0 0 0 20px;
                 text-transform: none;
@@ -45,7 +67,6 @@ table {
                     margin-left: 10px;
                 }
             }
-
             a.sort {
                 position: relative;
 
@@ -130,6 +151,22 @@ table {
             }
             &:last-child {
                 padding-right: 5px;
+            }
+
+            &.column-xs {
+                width: 90px;
+            }
+            &.column-sm {
+                width: 190px;
+            }
+            &.column-md {
+                width: 290px;
+            }
+            &.column-lg {
+                width: 390px;
+            }
+            &.column-xl {
+                width: 490px;
             }
         }
         tr {
