PIDC-252 : restrict column width to a max of 100% / add class to insure z-index of toggled row item
Change-Id: I32f201fe93dca4a7b77e7b81917a04a6a01eb97e

--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -865,6 +865,7 @@ $layout-nav-width-offset: 15px;
         flex: 1;
         box-sizing: border-box;
         margin: 0 40px 0 0;
+        max-width: 100%;
 
         @include flexbox-grow(1);
 
